fix(layout - basic): fixed table overflow

--- a/src/themes/common/layouts/basic.scss
+++ b/src/themes/common/layouts/basic.scss
@@ -62,9 +62,17 @@ table{
 
 #postamble > p{
     display: inline-block;
-    font-size: var(--font-size-4);
 }
 
 .author + .date {
     margin-left: 2rem;
+}
+
+blockquote{
+    margin-left: 1.5rem;
+}
+
+.outline-text-2, .outline-text-3, .outline-text-4{
+	max-width: 100%;
+	overflow-x: auto;
 }
